# sign-language-model

./: .gitignore  README.md  app.py  installation.txt  pyproject.toml  requirements.txt
data/: README.md
docs/: repo_link.txt
notebooks/: 01_eda.ipynb  01_eda_wlasl_original.ipynb  02_eda_wlasl_reduced.ipynb  02_preprocessing.ipynb  notebook_zy.ipynb  temp.ipynb
src/: constants.py  my_model.py  sign_language_translator.py  utils.py
src/sign_language_model/: __init__.py  augmentations.py  dataset.py  evaluation.py  models.py  train.py  utils.py
src/sign_language_model/scripts/: build_reduced_wlasl.py  extract_holistic_keypoints.py  extract_i3d_features.py
start_kit/: video_downloader.py
