[project]
name = "sign-language-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "hongjiaherng", email = "jiaherng2001@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.8",
    "mediapipe==0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "streamlit-webrtc>=0.64.5",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "video-features",
]

[project.scripts]
sign-language-model = "sign_language_model:main"
train-sign-language-model = "sign_language_model.train:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ipykernel>=7.1.0", "ipywidgets>=8.1.8", "ruff>=0.14.11"]

[project.optional-dependencies]
cpu = ["torch>=2.9.0", "torchvision>=0.24.0", "torchaudio>=2.9.0"]
cu130 = ["torch>=2.9.0", "torchvision>=0.24.0", "torchaudio>=2.9.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu130" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]
video-features = { git = "https://github.com/hongjiaherng/video_features.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
